--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.amazonaws.gamelift": "file:../Local Packages/com.amazonaws.gamelift-2.1.0.tgz",
+    "com.amazonaws.gameliftserver.sdk": "file:../Local Packages/com.amazonaws.gameliftserver.sdk-5.1.2.tgz",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.ide.rider": "3.0.34",
