--- a/GameLiftSettings.yaml
+++ b/GameLiftSettings.yaml
@@ -1,5 +1,5 @@
 version: 1
-LastOpenTab: ManagedEC2
+LastOpenTab: Anywhere
 CurrentProfileName: Unity-GameLift integraion
 CurrentRegion: eu-west-1
 UserProfiles: >+
